created ingredients model, view and controller for new page.

--- a/Alchemy Db/Views/Ingredients/Index.cshtml
+++ b/Alchemy Db/Views/Ingredients/Index.cshtml
@@ -2,3 +2,24 @@
 @model Alchemy_Db.Views.Ingredients.IndexModel
 @{
 }
+
+<br>
+<h2>List Of Ingredients</h2>
+<a class='btn btn-primary btn-sm' href='/ingredients/Create'>New Ingredient</a>
+<table class="table">
+<thead>
+<tr>
+    <th>ID</th>
+    <th>Name</th>
+    <th>Description</th>
+    <th>Image</th>
+    <th>QualityOne</th>
+    <th>QualityTwo</th>
+    <th>QualityThree</th>
+    <th>Category</th>
+
+</tr>
+</thead>  
+<tbody>
+</tbody>
+</table>
